@@ -1,26 +1,69 @@
+plugins {
+	id 'application'
+	id 'org.openjfx.javafxplugin' version '0.0.8'
+}
 
-apply plugin: 'application'
-mainClassName = "at.jku.isse.ecco.gui.EccoGui"
-applicationDefaultJvmArgs = ["-ea", "-Xss1024m", "-Xmx8g"]
+application {
+	mainClassName = "at.jku.isse.ecco.gui.EccoGui"
+	applicationDefaultJvmArgs = ["-Xss1024m", "-Xmx8g"]
+}
 
-task runTest(type: JavaExec, dependsOn: classes, group: 'application') {
-	main = "at.jku.isse.ecco.gui.EccoGui"
-	jvmArgs += ["-ea", "-Xss1024m", "-Xmx8g"]
-	classpath = sourceSets.test.runtimeClasspath
+//run {
+//	doFirst {
+//		jvmArgs = [
+//				'--module-path', classpath.asPath,
+//				'--add-modules="javafx.controls,javafx.swing"'
+//		]
+//	}
+//}
+
+//compileJava {
+//	doFirst {
+//		options.compilerArgs = [
+//				'--module-path', classpath.asPath,
+//				'--add-modules', 'javafx.controls,javafx.swing'
+//		]
+//	}
+//}
+
+javafx {
+	version = "13.0.1"
+	modules = ['javafx.base', 'javafx.controls', 'javafx.graphics', 'javafx.swing']
 }
 
 dependencies {
-	compile 'org.graphstream:gs-core:1.3'
-	compile 'org.graphstream:gs-algo:1.3'
-	compile 'org.graphstream:gs-ui:1.3'
+	implementation 'org.graphstream:gs-core:1.3'
+	implementation 'org.graphstream:gs-algo:1.3'
+	implementation 'org.graphstream:gs-ui:1.3'
 
-	compile project(':ecco-base')
-	compile project(':ecco-service')
+//	implementation group: 'org.openjfx', name: 'javafx', version: '13.0.1'
+//	implementation group: 'org.openjfx', name: 'javafx-base', version: '13.0.1'
+//	implementation group: 'org.openjfx', name: 'javafx-controls', version: '13.0.1'
+//	implementation group: 'org.openjfx', name: 'javafx-graphics', version: '13.0.1'
+//	implementation group: 'org.openjfx', name: 'javafx-swing', version: '13.0.1'
+//
+//	runtimeOnly "org.openjfx:javafx-base:13.0.1:win"
+//	runtimeOnly "org.openjfx:javafx-base:13.0.1:linux"
+//	runtimeOnly "org.openjfx:javafx-base:13.0.1:mac"
+//
+//	runtimeOnly "org.openjfx:javafx-controls:13.0.1:win"
+//	runtimeOnly "org.openjfx:javafx-controls:13.0.1:linux"
+//	runtimeOnly "org.openjfx:javafx-controls:13.0.1:mac"
+//
+//	runtimeOnly "org.openjfx:javafx-graphics:13.0.1:win"
+//	runtimeOnly "org.openjfx:javafx-graphics:13.0.1:linux"
+//	runtimeOnly "org.openjfx:javafx-graphics:13.0.1:mac"
+//
+//	runtimeOnly "org.openjfx:javafx-swing:13.0.1:win"
+//	runtimeOnly "org.openjfx:javafx-swing:13.0.1:linux"
+//	runtimeOnly "org.openjfx:javafx-swing:13.0.1:mac"
 
-	testRuntime project(':ecco-adapter-file')
-	testRuntime project(':ecco-adapter-text')
-	testRuntime project(':ecco-adapter-image')
-	testRuntime project(':ecco-adapter-challenge')
+	implementation project(':ecco-service')
+
+	testRuntimeOnly project(':ecco-adapter-file')
+	testRuntimeOnly project(':ecco-adapter-text')
+	testRuntimeOnly project(':ecco-adapter-image')
+	testRuntimeOnly project(':ecco-adapter-challenge')
 }
 
 ospackage {
@@ -41,7 +84,7 @@ ospackage {
 }
 
 linuxZip {
-	into(archiveName - ('.' + extension)) {
+	into(archiveName - ('.' + archiveExtension)) {
 		from 'ecco-gui'
 	}
 }
@@ -52,7 +95,7 @@ sourcesZip {
 }
 
 windowsZip {
-	into(archiveName - ('.' + extension)) {
+	into(archiveName - ('.' + archiveExtension)) {
 		from 'ecco-gui.bat'
 	}
 }
